// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog AlertDialog Role should render correctly with given children and default props 1`] = `
Array [
  ".dialog-0-2-1 {
  top: 50%;
  left: 50%;
  z-index: 3;
  position: absolute;
  transform: translate(-50%, -50%);
  box-shadow: 0 16px 24px 0 rgba(0, 0, 0, 0.14);
  max-height: 70%;
  border-radius: 4px;
  flex-direction: column;
  background-color: #ffffff;
}
.overlay-0-2-2 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0.56;
  z-index: 2;
  position: fixed;
  background: #000000;
}
.dialog-d0-0-2-3 {
  display: none;
}
.overlay-d1-0-2-4 {
  display: none;
}
.dialogContent-0-2-5 {
  color: #333333;
  padding: 16px;
  font-size: 16px;
  overflow-y: auto;
  font-family: Roboto, sans-serif;
}",
  <div>
    <section
      aria-describedby="description"
      aria-modal="true"
      class="dialog-0-2-1 dialog-d0-0-2-3"
      role="alertdialog"
    >
      <div
        class="dialogContent-0-2-5"
      >
        <p
          id="description"
        >
          something on the body
        </p>
      </div>
    </section>
    <div
      class="overlay-0-2-2 overlay-d1-0-2-4"
    />
  </div>,
]
`;

exports[`Dialog Dialog role should render correctly with divider at DialogBody 1`] = `
Array [
  ".dialog-0-2-1 {
  top: 50%;
  left: 50%;
  z-index: 3;
  position: absolute;
  transform: translate(-50%, -50%);
  box-shadow: 0 16px 24px 0 rgba(0, 0, 0, 0.14);
  max-height: 70%;
  border-radius: 4px;
  flex-direction: column;
  background-color: #ffffff;
}
.overlay-0-2-2 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0.56;
  z-index: 2;
  position: fixed;
  background: #000000;
}
.dialog-d0-0-2-3 {
  display: none;
}
.overlay-d1-0-2-4 {
  display: none;
}
.dialogHeaderContainer-0-2-5 {
  display: flex;
  padding: 16px;
  align-items: center;
  justify-content: space-between;
}
.dialogHeader-0-2-6 {
  color: #333333;
  margin: 0;
  font-size: 20px;
  font-family: Roboto, sans-serif;
}
.dialogHeaderChildrenContainer-0-2-7 {
  gap: 16px;
  display: flex;
}
.action-0-2-12 {
  gap: 16px;
  display: flex;
  padding: 16px;
  justify-content: flex-end;
}
.divider-0-2-9 {
  border: 0;
  height: 1px;
  margin-top: 0;
  margin-bottom: 0;
  background-color: #bbbbbb;
}
.divider-d0-0-2-10 {
  margin-right: 0;
  margin-left: 0;
}
.divider-d1-0-2-11 {
  margin-right: 0;
  margin-left: 0;
}
.dialogContent-0-2-8 {
  color: #333333;
  padding: 16px;
  font-size: 16px;
  overflow-y: auto;
  font-family: Roboto, sans-serif;
}",
  <div>
    <section
      aria-describedby="description"
      aria-labelledby="title"
      aria-modal="true"
      class="dialog-0-2-1 dialog-d0-0-2-3"
      role="dialog"
    >
      <div
        class="dialogHeaderContainer-0-2-5"
      >
        <h2
          class="dialogHeader-0-2-6"
          id="title"
        >
          Example
        </h2>
        <div
          class="dialogHeaderChildrenContainer-0-2-7"
        />
      </div>
      <hr
        class="divider-0-2-9 divider-d0-0-2-10"
      />
      <div
        class="dialogContent-0-2-8"
      >
        <p
          id="description"
        >
          something on the body
        </p>
      </div>
      <hr
        class="divider-0-2-9 divider-d1-0-2-11"
      />
      <div
        class="action-0-2-12"
      >
        something on the footer
      </div>
    </section>
    <div
      class="overlay-0-2-2 overlay-d1-0-2-4"
    />
  </div>,
]
`;

exports[`Dialog Dialog role should render correctly with given children 1`] = `
Array [
  ".dialog-0-2-1 {
  top: 50%;
  left: 50%;
  z-index: 3;
  position: absolute;
  transform: translate(-50%, -50%);
  box-shadow: 0 16px 24px 0 rgba(0, 0, 0, 0.14);
  max-height: 70%;
  border-radius: 4px;
  flex-direction: column;
  background-color: #ffffff;
}
.overlay-0-2-2 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0.56;
  z-index: 2;
  position: fixed;
  background: #000000;
}
.dialog-d0-0-2-3 {
  display: none;
}
.overlay-d1-0-2-4 {
  display: none;
}
.dialogHeaderContainer-0-2-5 {
  display: flex;
  padding: 16px;
  align-items: center;
  justify-content: space-between;
}
.dialogHeader-0-2-6 {
  color: #333333;
  margin: 0;
  font-size: 20px;
  font-family: Roboto, sans-serif;
}
.dialogHeaderChildrenContainer-0-2-7 {
  gap: 16px;
  display: flex;
}
.action-0-2-9 {
  gap: 16px;
  display: flex;
  padding: 16px;
  justify-content: flex-end;
}
.dialogContent-0-2-8 {
  color: #333333;
  padding: 16px;
  font-size: 16px;
  overflow-y: auto;
  font-family: Roboto, sans-serif;
}",
  <div>
    <section
      aria-describedby="description"
      aria-labelledby="title"
      aria-modal="true"
      class="dialog-0-2-1 dialog-d0-0-2-3"
      role="dialog"
    >
      <div
        class="dialogHeaderContainer-0-2-5"
      >
        <h2
          class="dialogHeader-0-2-6"
          id="title"
        >
          Example
        </h2>
        <div
          class="dialogHeaderChildrenContainer-0-2-7"
        />
      </div>
      <div
        class="dialogContent-0-2-8"
      >
        <p
          id="description"
        >
          something on the body
        </p>
      </div>
      <div
        class="action-0-2-9"
      >
        something on the footer
      </div>
    </section>
    <div
      class="overlay-0-2-2 overlay-d1-0-2-4"
    />
  </div>,
]
`;
